--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,20 @@
     android:layout_height="match_parent"
     tools:context="com.hoka.mariyelradio.MainActivity">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:text="PLAY"
-        tools:layout_editor_absoluteX="112dp"
-        tools:layout_editor_absoluteY="221dp" />
+        <Button
+            android:id="@+id/play_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PLAY" />
+        <Button
+            android:id="@+id/stop_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PAUSE"/>
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
